--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/metrics
+spring.datasource.url=jdbc:mariadb://db:3306/metrics
 spring.datasource.username=root
 spring.datasource.password=example
