--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,18 @@ services:
     environment:
       MARIADB_ROOT_PASSWORD: example
       MARIADB_DATABASE: metrics
+    healthcheck:
+      test: ["CMD", "mysqladmin", "-pexample", "ping"]
+      timeout: 5s
+      interval: 5s
+      retries: 12
 
   backend:
     build: .
     container_name: server
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     ports:
       - "8080:8080"
     environment:
