--- a/build.gradle
+++ b/build.gradle
@@ -4,17 +4,22 @@ plugins {
 	id 'java'
 }
 
-group = 'cz.cvut.fit'
-version = '0.1'
+group = 'cz.wikimedia.stats'
+version = '0.2a'
 sourceCompatibility = '18'
 
 repositories {
 	mavenCentral()
 }
 
+springBoot {
+	buildInfo()
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
