--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,13 @@ repositories {
 }
 
 springBoot {
-	buildInfo()
+	buildInfo {
+		properties {
+			additional = [
+				'contact' : 'info@wikimedia.cz'
+			]
+		}
+	}
 }
 
 dependencies {
