--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,38 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
+### Vue automatic initialization ###
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+.DS_Store
+dist
+dist-ssr
+coverage
+*.local
+
+/cypress/videos/
+/cypress/screenshots/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
