--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:mariadb://db:3306/metrics
 spring.datasource.username=root
 spring.datasource.password=example
+server.servlet.context-path=/api
 spring.jpa.hibernate.ddl-auto=update
