--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 # fill in with proper values
 
+# can be anything but do not change these after the database is built
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
 DATABASE_ROOT_PASSWORD=
 
+BACKEND_URL=      # expects backend to be at BACKEND_URL/api
+DEFAULT_LOCALE=   # currently supports cs-CZ, en-US
