--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,8 @@ DATABASE_USERNAME=
 DATABASE_PASSWORD=
 DATABASE_ROOT_PASSWORD=
 
+METAWIKI_KEY=
+METAWIKI_SECRET=
+
 BACKEND_URL=
 DEFAULT_LOCALE=   # currently supports cs-CZ, en-US
