Temp whitelisting It's a start

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ METAWIKI_SECRET=
 
 BACKEND_URL=
 DEFAULT_LOCALE=   # currently supports cs-CZ, en-US
+
+TEMP_SUB=    # TEMPORARY: global IDs of people with authorized access
