Hotfix forgotten localhost

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=${DATABASE_PASSWORD}
 spring.security.oauth2.client.registration.metawiki.client-id=${METAWIKI_KEY}
 spring.security.oauth2.client.registration.metawiki.client-secret=${METAWIKI_SECRET}
 spring.security.oauth2.client.registration.metawiki.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.metawiki.redirect-uri=http://localhost:8080/api/login/oauth2/code/metawiki
+spring.security.oauth2.client.registration.metawiki.redirect-uri=${BACKEND_URL}/api/login/oauth2/code/metawiki
 spring.security.oauth2.client.provider.metawiki.authorization-uri=https://meta.wikimedia.org/w/rest.php/oauth2/authorize
 spring.security.oauth2.client.provider.metawiki.token-uri=https://meta.wikimedia.org/w/rest.php/oauth2/access_token
 spring.security.oauth2.client.provider.metawiki.user-info-uri=https://meta.wikimedia.org/w/rest.php/oauth2/resource/profile
